--- a/Login-Control/Login-Control/Login-Control.csproj
+++ b/Login-Control/Login-Control/Login-Control.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BDF0E2E6-1916-4D70-AA0E-1440D6AFD388}</ProjectGuid>
+    <ProjectGuid>{9C764CBA-6A46-4F84-953D-6ADF17C25000}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>LoginControl</RootNamespace>
-    <AssemblyName>LoginControl</AssemblyName>
+    <RootNamespace>Login_Control</RootNamespace>
+    <AssemblyName>Login-Control</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
